# windows-tasks

./: README.md  package-lock.json  package.json
src/: App.tsx  Layout.tsx  UserState.tsx  styles.css  types.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CompletedTaskList.tsx  DrawTimer.tsx  Drawer.tsx  Progress.tsx  TaskTimers.tsx  Theme.tsx  Timepicker.tsx  Toast.tsx
